<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
<item android:id="@+id/action_home"
          android:icon="@drawable/ic_home_white_24dp"
          app:showAsAction="always"
             android:title="@string/action_home"/>

    <item android:id="@+id/register"
           app:showAsAction="ifRoom"
          android:icon="@drawable/ic_person_add_white_24dp"
          android:title="@string/registration"/>

    <item android:id="@+id/language"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_language_white_24dp"
          android:title="@string/language"/>


    <item android:id="@+id/action_logout"
        app:showAsAction="withText"
        android:title="@string/action_logout"/>

</menu>
