<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="vertical"
              android:weightSum="3"

    >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_weight="1"
                >

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    >



                    <android.support.v7.widget.CardView
                        android:id="@+id/clients_cv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/spacing_half"
                        android:layout_marginBottom="@dimen/spacing_half"


                        >


                        <RelativeLayout
                            android:id="@+id/pregnancy_messages"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:clickable="true"
                            android:background="?attr/selectableItemBackground"

                            >


                            <ImageView
                                android:layout_width="@dimen/logo_size"
                                android:layout_height="@dimen/logo_size"
                                android:padding="@dimen/spacing_half"
                                android:src="@drawable/pregnant_woman_color"
                                android:layout_centerInParent="true"


                                />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:background="@color/colorAccent"
                                android:maxLines="1"
                                android:textColor="@color/white"
                                android:gravity="center"
                                android:padding="@dimen/spacing_half"
                                android:text="@string/pregnancy_messages" />
                        </RelativeLayout>


                    </android.support.v7.widget.CardView>

                </LinearLayout>



                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >


                    <android.support.v7.widget.CardView
                        android:id="@+id/meetings_cv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/spacing_half"
                        android:layout_marginBottom="@dimen/spacing_half"

                        >

                        <RelativeLayout
                            android:id="@+id/baby_first_year"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:clickable="true"
                            android:background="?attr/selectableItemBackground">


                            <ImageView
                                android:layout_width="@dimen/logo_size"
                                android:layout_height="@dimen/logo_size"
                                android:src="@drawable/baby_color"
                                android:padding="@dimen/spacing_normal"

                                android:layout_centerInParent="true"

                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:background="@color/colorAccent"
                                android:textColor="@color/white"
                                android:padding="@dimen/spacing_half"
                                android:maxLines="1"
                                android:text="@string/first_year" />
                        </RelativeLayout>



                    </android.support.v7.widget.CardView>
                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_weight="1"
                android:baselineAligned="false"
                >

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >



                    <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/spacing_half"
                        android:layout_marginTop="@dimen/spacing_half"

                        >


                        <RelativeLayout
                            android:id="@+id/youth_sex_health"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:background="?attr/selectableItemBackground">


                            <ImageView
                                android:layout_width="@dimen/logo_size"
                                android:layout_height="@dimen/logo_size"
                                android:src="@drawable/gender_color"
                                android:layout_centerInParent="true"
                                android:padding="@dimen/spacing_normal"/>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:padding="@dimen/spacing_half"
                                android:background="@color/colorAccent"
                                android:textColor="@color/white"
                                android:maxLines="1"
                                android:gravity="center"
                                android:text="@string/youth_sexual" />
                        </RelativeLayout>


                    </android.support.v7.widget.CardView>

                </LinearLayout>



                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    >

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/spacing_half"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/spacing_half"

                        >


                        <RelativeLayout
                            android:id="@+id/visual_aids"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:background="?attr/selectableItemBackground">


                            <ImageView
                                android:layout_width="@dimen/logo_size"
                                android:layout_height="@dimen/logo_size"
                                android:src="@drawable/visual_color"
                                android:padding="@dimen/spacing_normal"
                                android:layout_centerInParent="true" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:padding="@dimen/spacing_half"
                                android:maxLines="1"
                                android:background="@color/colorAccent"
                                android:textColor="@color/white"
                                android:gravity="center"
                                android:text="@string/visual_aids" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_weight="1"
                android:baselineAligned="false"
                >

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >



                    <android.support.v7.widget.CardView
                        android:id="@+id/technical_cv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/spacing_half"
                        android:layout_marginTop="@dimen/spacing_half"

                        >


                        <RelativeLayout
                            android:id="@+id/alert"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:background="?attr/selectableItemBackground">


                            <ImageView
                                android:layout_width="@dimen/logo_size"
                                android:layout_height="@dimen/logo_size"
                                android:src="@drawable/popup_color"
                                android:padding="@dimen/spacing_normal"
                                android:layout_centerInParent="true" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:padding="@dimen/spacing_half"
                                android:background="@color/colorAccent"
                                android:textColor="@color/white"
                                android:maxLines="1"
                                android:gravity="center"
                                android:text="@string/referral" />
                        </RelativeLayout>


                    </android.support.v7.widget.CardView>

                </LinearLayout>



                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    >

                    <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                        android:layout_height="match_parent"
                         android:layout_marginLeft="@dimen/spacing_half"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/spacing_half"

                        >


                        <RelativeLayout
                            android:id="@+id/settings"
                            android:layout_width="match_parent"
                            android:clickable="true"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:background="?attr/selectableItemBackground">


                            <ImageView
                                android:layout_width="@dimen/logo_size"
                                android:layout_height="@dimen/logo_size"
                                android:src="@drawable/group_meetings"
                                android:padding="@dimen/spacing_normal"
                                android:layout_centerInParent="true" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:background="@color/colorAccent"
                                android:gravity="center"
                                android:textColor="@color/white"
                                android:padding="@dimen/spacing_half"
                                android:text="Group Meetings" />
                        </RelativeLayout>



                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
